# ezlife

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  setup.py  testme.py  tests.py
old/: data_source.py  gbq_plot.py  input_handler.py  pandas_plot.py  stats.py
stats/: __init__.py  data_source.py  gbq_data.py  input_handler.py  pandas_plot.py  plots.py  query_builder.py
stats/utils/: __init__.py  gbq.py  logger.py  utils.py
tests/: gbq_data_get_tests.py  gbq_data_plots_tests.py
