[tool.poetry]
name = "stats"
version = "0.7.0"
description = ""
authors = ["patrick <chodowski.patrick@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.3.0"
matplotlib = "^3.4.2"
google-cloud-bigquery = "^2.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
